--- a/webpages/topbar.html
+++ b/webpages/topbar.html
@@ -1,6 +1,10 @@
-<div class="top-bar">
-    <h2 class="top-bar-element top-bar-header">Dataspar</h2>
-    <a href="/">Hem</a>
-    <a href="/public">Öppen Data</a>
-    <a href="/account">Mitt konto</a>
-</div>
+<header >
+    <h2>Dataspar</h2>
+    <nav>
+        <ul>
+            <li><a href="/">Hem</a></li>
+            <li><a href="/public">Öppen Data</a></li>
+            <li><a href="/account">Mitt konto</a></li>
+        </ul>
+    </nav>
+</header>
