--- a/webpages/home.html
+++ b/webpages/home.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
     <head>
         <meta charset="utf-8" />
         <title>Dataspar</title>
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
+        <iframe src="/navbar/navbar.html"></iframe>
         <div class="center-page">
-            %topbar%
-            <div class="center-text">
-                <a class="btn" href="/login">Logga in!</a><a class="btn"
-                    href="/register">Registrera dig!</a>
+            <div class="center-contents">
+                <a href="/login"><button>Logga in!</button></a>
+                <a href="/register"><button>Registrera dig!</button></a>
             </div>
         </div>
     </body>
