--- a/public/navbar/navbar.html
+++ b/public/navbar/navbar.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h2>Dataspar</h2>
+            <h2>Datahålet</h2>
             <nav>
                 <ul class="nav-links">
                     <li><a target="_top" href="/">Hem</a></li>
