--- a/webpages/login.html
+++ b/webpages/login.html
@@ -10,14 +10,14 @@
         <iframe src="/navbar/navbar.html"></iframe>
         <div class="center-page center-contents">
             <!-- https://www.w3schools.com/howto/howto_css_login_form.asp -->
-            <form action="authenticate" method="POST">
+            <form action="login" method="POST">
                 <div>
-                    <label for="uname"><b>Användarnamn</b></label>
+                    <label for="userName"><b>Användarnamn</b></label>
                     <input type="text" placeholder="Skriv in användarnamn"
-                        name="uname" required>
-                    <label for="psw"><b>Lösenord</b></label>
+                        name="userName" required>
+                    <label for="password"><b>Lösenord</b></label>
                     <input type="password" placeholder="Skriv in lösenord"
-                        name="psw" required>
+                        name="password" required>
                 </div>
                 <button type="submit">Login</button>
                 <label>
