Alternative favicon on error and styling

--- a/pageBlocks/home.html
+++ b/pageBlocks/home.html
@@ -1,6 +1,6 @@
 <div class="center-page">
     <div class="center-contents">
-        <div class="link-box">
+        <div class="link-box center-contents">
             %linkList%
         </div>
     </div>
