--- a/pageBlocks/navbar.html
+++ b/pageBlocks/navbar.html
@@ -1,5 +1,9 @@
- <header>
-    <h2>Länklådan</h2>
+<header>
+    <a href="/">
+        <h2>
+            <img class="logo" src="/Logo_128.png" alt="Logga"> Länklådan
+        </h2>
+    </a>
     <nav>
         <ul>
             <li><a href="/">Hem</a></li>
